FeedbackService/kube/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-service-db
spec:
  selector:
    app: feedback-mysql-app
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-mysql-deployment
spec:
  selector:
    matchLabels:
      app: feedback-mysql-app
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: feedback-mysql-app
        tier: backend
    spec:
      containers:
        - name: feedback-mysql-app
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: feedback-data-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: feedback-data-volume
          persistentVolumeClaim:
            claimName: feedback-service-mysql-pvc
