FeedbackService/kube/feedback-service.yaml
# ... Deployment YAML definition
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-app
      tier: backend
  template:
    metadata:
      labels:
        app: feedback-app
        tier: backend
    spec:
      containers:
        - name: feedback-app
          image: peshmerge/feedback-service:1.0.0
          ports:
            - containerPort: 9091
              name: service-port
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: service-port
              path: /v1/feedbacks/actuator/health
            initialDelaySeconds: 20
            timeoutSeconds: 5
---
# ... Service YAML definition
apiVersion: v1
kind: Service
metadata:
  name: feedback-service
spec:
  selector:
    app: feedback-app
    tier: backend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 9091
  type: ClusterIP
