FeedbackService/kube/ratefy-gateway.yaml
# Make sure you have enabled ingress using minikube addons enable ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ratefy-gateway
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /v1/feedbacks/
            backend:
              serviceName: feedback-service
              servicePort: 80

          - path: /v1/questionnaires/
            backend:
              serviceName: questionnaire-service
              servicePort: 80

          - path: /v1/rewards/
            backend:
              serviceName: reward-service
              servicePort: 80

          - path: /v1/schedules/
            backend:
              serviceName: schedule-service
              servicePort: 80

          - path: /v1/students/
            backend:
              serviceName: student-service
              servicePort: 80

          - path: /v1/users/
            backend:
              serviceName: user-service
              servicePort: 80

          - path: /mq/
            backend:
              serviceName: rabbitmq-service
              servicePort: 80
